<resources>
    <string name="app_name">L01_2_mod</string>

    <string name="actM_button1"></string>
    <string name="actM_button2"></string>
    <string name="actM_button3"></string>
    <string name="actM_text1_M">wyśrodkowany krótki opis</string>
    <string name="actM_text2_M">Kamila Sproska</string>

    <string name="act2_button1">Toast</string>
    <string name="act2_button2">Back</string>
    <string name="act2_radiobutton1">visible</string>
    <string name="act2_radiobutton2">invisible</string>
    <string name="act2_togglebutton1">Togglebutton</string>
    <string name="act2_text1_2_on">on</string>
    <string name="act2_text1_2_off">off</string>

    <string name="act4_button1">Back</string>
    <string name="act3_text1">name</string>
    <string name="act3_text2">e-mail</string>
    <string name="act3_text3">phone</string>
    <string name="act3_text4">weight</string>
    <string name="act3_text5">height</string>
    <string name="act3_button_bmi">BMI</string>
    <string name="act3_button_back">back</string>

    <string name="act3_edittext1">Kamila Sproska</string>
    <string name="act3_edittext2">kamila.sproska@gmail.com</string>
    <string name="act3_edittext3">+48 794 707 958</string>
    <string name="act3_edittext4">63.5</string>
    <string name="act3_edittext5">1.78</string>
    <string name="act5_button_cal">Calculate</string>
    <string name="act4_progress">Progress : 0</string>
    <string name="act4_progress_to_fill">Progress : </string>
</resources>