<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <RadioGroup
        android:id="@+id/radioGroup1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton1_2"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act2_radiobutton1" />

        <RadioButton
            android:id="@+id/radioButton2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act2_radiobutton2" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggleButton1_2"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act2_togglebutton1"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act2_text1_2_on"
        android:textSize="96sp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        tools:layout_editor_absoluteX="83dp" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/button1_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:text="@string/act2_button1" />

        <Button
            android:id="@+id/button2_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:text="@string/act2_button2" />
    </TableRow>

    <ImageView
        android:id="@+id/imageView1_2"
        android:layout_width="259dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_crop" />
</androidx.constraintlayout.widget.ConstraintLayout>
