<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEntry" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableRow
            android:id="@+id/act3_row1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="35dp"
            android:paddingTop="35dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/act3_text1"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/act3_text1" />

            <EditText
                android:id="@+id/act3_edittext1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/act3_edittext1"/>

        </TableRow>

        <TableRow
            android:id="@+id/act3_row2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="35dp"
            android:paddingTop="35dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/act3_text2"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/act3_text2" />

            <EditText
                android:id="@+id/act3_edittext2"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@string/act3_edittext2"/>

        </TableRow>

        <TableRow
            android:id="@+id/act3_row3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="35dp"
            android:paddingTop="35dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/act3_text3"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/act3_text3" />

            <EditText
                android:id="@+id/act3_edittext3"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:text="@string/act3_edittext3"/>

        </TableRow>

        <TableRow
            android:id="@+id/act3_row4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="35dp"
            android:paddingTop="35dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/act3_text4"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/act3_text4" />

            <EditText
                android:id="@+id/act3_edittext4"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/act3_edittext4"/>

        </TableRow>

        <TableRow
            android:id="@+id/act3_row5"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="35dp"
            android:paddingTop="35dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/act3_text5"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/act3_text5" />

            <EditText
                android:id="@+id/act3_edittext5"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/act3_edittext5"/>

        </TableRow>

        <TableRow
            android:id="@+id/act3_row6"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="35dp"
            android:paddingTop="35dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >


            <Button
                android:id="@+id/button_bmi"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/act3_button_bmi" />

            <TextView
                android:id="@+id/act3_text_bmi"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:id="@+id/act3_row7"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="35dp"
            android:paddingTop="35dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >


            <Button
                android:id="@+id/act3_button_back"
                android:onClick="finishActivity3"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/act3_button_back" />
        </TableRow>
    </TableLayout>
</ScrollView>